# grokken

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/configs/: federalist.yaml  principia_collection.yaml  psychology_james.yaml
grokken/: __init__.py  base.py  cli.py  registry.py
grokken/books/: __init__.py
grokken/books/principia/: __init__.py  algebra_day.py  animal_histology_dahlgren.py  atonement.py  bible_literature_wood.py  channing_works.py  chaucer_student.py  church_building_cram.py  cornerstone_abbott.py  dickens_works.py  doctrines_friends_bates.py  english_literature_shaw.py  ethics_jouffroy.py  evolution_conn.py  federalist.py  hermeneutical_manual_fairbairn.py  history_religions_toy.py  international_law_davis_1900.py  international_law_davis_1903.py  international_law_woolsey.py  logical_theory_dewey.py  middle_ages_emerton.py  natural_philosophy_comstock.py  parliamentary_practice_cushing.py  pathologic_histology_mallory.py  poetical_works_whittier.py  political_economy_bowen.py  political_economy_mill_1870.py  political_economy_mill_1884.py  political_science_leacock.py  psychology_james.py  sociology_giddings.py  sociology_spencer.py  stowe_writings.py  vicarious_sacrifice_bushnell.py
grokken/generation/: __init__.py  analyzer.py  cli.py  config.py  generator.py  prompts.py  schema.py  segmenter.py  simulated_user.py
grokken/generation/books/: __init__.py  base.py
grokken/generation/providers/: __init__.py  anthropic.py  base.py  openai.py
grokken/outputs/: __init__.py  jsonl.py  parquet.py
grokken/transforms/: __init__.py  encoding.py  ocr.py  structure.py  typography.py  whitespace.py
tests/: __init__.py  test_base.py  test_transforms.py
(+3 files in other folders)
