[project]
name = "grokken"
version = "0.1.0"
description = "Deep understanding and transformation of historical texts for training data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "regex>=2023.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
generation = [
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "openai-harmony>=0.0.6",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
]

[project.scripts]
grokken = "grokken.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["grokken"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
